--- a/index.html
+++ b/index.html
@@ -1,1 +1,296 @@
-<div style="font-size: 500px;">Hello world</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles/style.css" />
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <title>ULAVi</title>
+</head>
+
+<body>
+  <header>
+    <a class="logo" href="index.html">
+      <img src="images/LOGO.png" alt="ULAVi logo">
+      <h1>ULAVi</h1>
+    </a>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Volunteer</a></li>
+        <li><a href="#" class="contact-btn">Contact</a></li>
+        <li><a href="#" class="donate-btn">Donate</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="hero">
+    <img src="images/TUMAINI MOVIN_46.JPG" alt="SevenOmore perfoming at TUMAINI MOVIN MINDS" />
+    <div class="hero-content">
+      <img src='images/LOGO.png' alt='ULAVi logo' style='width: 100px; height: 100px;'>
+      <!-- <h2 class="phrase" style='font-size: 1.2rem; color: #fff'>Urban Links Art Village (ULAVi)</h2> -->
+      <h1>Urban Links Art Village (ULAVi)</h1>
+      <p>Unleash the power of creativity with us</p>
+      <a href="#" class="btn">Get in touch</a>
+    </div>
+  </section>
+  <section class="about ">
+    <div class="sect-info ">
+      <h3 class="phrase">Empowering creativity<h3>
+          <h2 class="sect-title">Unite and elevate malawi's artists</h2>
+          <p class="sect-desc">
+            Urban Link Arts Village (ULAVi) is a registered non-profit organization founded in 2016, dedicated to
+            empowering and uniting Malawi’s creative community. Through transformative initiatives like Art Farming and
+            a digital art platform, ULAVi provides artists with the tools they need to thrive. We focus on fostering
+            artistic excellence, advocating for cultural preservation, and enabling communities to harness creativity
+            for social and economic progress in Lilongwe, Malawi.
+          </p>
+          <a href="" class="sect-link">Learn more</a>
+    </div>
+    <div class="sect-img">
+      <img src="images/TUMAINI MOVIN_25.JPG" loading="lazy" alt="ULAVi artists at work" />
+    </div>
+
+  </section>
+  <section class="services-sect">
+    <h2 class="phrase" style="color: rebeccapurple">Creative works</h2>
+    <h3 class="sect-title" style="color: white">Our services</h3>
+    <p class="sect-desc" style="color: #dfdbdb;">
+      ULAVi’s projects are designed to empower Malawi’s creative community and provide artists with the tools they need
+      to
+      thrive. From Art Farming to the Digital Art Platform, our initiatives are transforming the way artists connect
+      with
+      audiences and each other.
+    </p>
+    <div class="services">
+      <div class="service-card">
+        <img src="images/TUMAINI MOVIN_46.JPG" class="service-img" alt="ULAVi artists at work" />
+        <div class='service-content'>
+          <h3 class="service-title">Art Farming</h3>
+          <p class="service-desc">
+            ULAVi’s Art Farming aims at empowering Malawi’s creative community by providing artists with the tools they
+            need
+          </p>
+          <a href="" class="service-link">Learn more</a>
+        </div>
+
+      </div>
+      <div class="service-card">
+        <img src="images/TUMAINI MOVIN_18.JPG" class="service-img" alt="ULAVi artists at work" />
+        <div class="service-content">
+          <h3 class="service-title">Digital Art Platform</h3>
+          <p class="service-desc">
+            ULAVi’s Digital Art Platform is a space for artists to showcase their work and connect with a global
+            audience.
+          </p>
+          <a href="" class="service-link">Learn more</a>
+        </div>
+
+      </div>
+      <div class="service-card">
+        <img src="images/TUMAINI MOVIN_25.JPG" class="service-img" alt="ULAVi artists at work" />
+        <div class="service-content">
+          <h3 class="service-title">Art Law Initiative </h3>
+          <p class="service-desc">
+            The Art Law Initiative at ULAVi is dedicated to protecting the
+            rights of artists and creative professionals in Malawi.
+          </p>
+          <a href="" class="service-link">Learn more</a>
+        </div>
+
+      </div>
+      <div class="service-card">
+        <img src="images/TUMAINI MOVIN_23.JPG" class="service-img" alt="ULAVi artists at work" />
+        <div class="service-content">
+          <h3 class="service-title">Cultural preservation program </h3>
+          <p class="service-desc">
+            The Cultural Preservation Program is dedicated to safeguarding Malawi’s artistic heritage through education
+            and community engagement.
+          </p>
+          <a href="" class="service-link">Learn more</a>
+        </div>
+
+      </div>
+    </div>
+
+
+
+  </section>
+  <section class="latest-updates">
+    <h2 class="phrase">Stay informed</h2>
+    <h3 class="sect-title">Latest updates</h3>
+    <div class="latests">
+      <div class="latest-card">
+        <img src="images/TUMAINI MOVIN_18.JPG" alt="">
+        <div class="latest-info">
+          <h3 class="latest-title">ULAVi’s Digital Art Platform connects artists with a global audience</h3>
+          <p class="latest-desc">
+            ULAVi’s Digital Art Platform is a space for artists to showcase their work and connect with a global
+            audience.
+            Learn more about how we’re empowering Malawi’s creative community.
+          </p>
+          <a href="" class="latest-link">Read more</a>
+        </div>
+      </div>
+      <div class="latest-card">
+        <h3 class="sect-title">Sign up for our newsletter</h3>
+        <p class="sect-desc">
+          Stay up to date with ULAVi’s latest news, events, and initiatives. Sign up for our newsletter to receive
+          updates
+          directly to your inbox.
+        </p>
+        <form action='POST'>
+          <input type="email" placeholder="Enter your email" />
+          <button type="submit">Sign up</button>
+        </form>
+        <a href="" class="sect-link">See all updates</a>
+      </div>
+    </div>
+
+
+
+  </section>
+  <section class="countdown">
+    <h2 class="phrase">Creative innovations</h2>
+    <h3 class="sect-title">Countdown for urbanlinksmalawi.com release</h3>
+    <p class="sect-desc">
+      We’re excited to announce the upcoming launch of our new website. Stay tuned for the latest updates and
+      initiatives from ULAVi.
+    </p>
+    <div class="countdown-timer">
+      <div class="countdown-item">
+        <h3 class="countdown-number" id="days">00</h3>
+        <p class="countdown-text">Days</p>
+      </div>
+      <div class="countdown-item">
+        <h3 class="countdown-number" id="hours">00</h3>
+        <p class="countdown-text">Hours</p>
+      </div>
+      <div class="countdown-item">
+        <h3 class="countdown-number" id="mins">00</h3>
+        <p class="countdown-text">Minutes</p>
+      </div>
+      <div class="countdown-item">
+        <h3 class="countdown-number" id="secs">00</h3>
+        <p class="countdown-text">Seconds</p>
+      </div>
+      <script>
+        // Set the date we're counting down to
+        var countDownDate = new Date("Apr 01, 2025 00:00:00").getTime();
+
+        // Update the count down every 1 second
+        var x = setInterval(function () {
+
+          // Get today's date and time
+          var now = new Date().getTime();
+
+          // Find the distance between now and the count down date
+          var distance = countDownDate - now;
+
+          // Time calculations for days, hours, minutes and seconds
+          var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+          var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+          var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+          var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+          // Display the result in the element with id="demo"
+          document.getElementById("days").innerHTML = days;
+          document.getElementById("hours").innerHTML = hours;
+          document.getElementById("mins").innerHTML = minutes;
+          document.getElementById("secs").innerHTML = seconds;
+
+          // If the count down is finished, write some text
+          if (distance < 0) {
+            clearInterval(x);
+            document.getElementById("demo").innerHTML = "EXPIRED";
+          }
+        }, 1000);
+      </script>
+  </section>
+  <section class="contact-sect">
+    <h2 class="phrase">Get in touch</h2>
+    <h3 class="sect-title">Connect with our creative community</h3>
+    <p class="sect-desc" style="max-width: 600px;">
+      Have a question or want to learn more about ULAVi’s initiatives? Contact us today to get involved and support
+      Malawi’s creative community.
+    </p>
+    <div class="contact-parts">
+      <div class="contact-part">
+
+        <form action='POST' class="contact-form">
+          <h3 class="contact-title" style="color: #333;">Send us a message</h3>
+
+          <label for="name">Name</label>
+          <input type="text" placeholder="Name" id="name" />
+          <label for="email">Email</label>
+          <input type="email" placeholder="Email" id="email" />
+          <label for="phone">Phone Number</label>
+          <input type="tel" placeholder="Phone Number" id="phone" />
+
+          <label for="message">Message(optional)</label>
+          <textarea placeholder="Message" id='message'></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </div>
+      <div class="contact-part contact-card">
+
+        <div class="contact-info">
+          <h3 class="contact-title">Get in touch</h3>
+          <p class="contact-desc"><i class='bx bx-envelope'></i>ulaviarts@gmail.com</p>
+          <p class="contact-desc">
+            <i class='bx bx-phone'></i> +265 999 999 999 <br> +265 888 888 888
+          </p>
+
+          <h3 class="contact-title">
+            Location
+          </h3>
+          <p class="contact-desc">
+            <i class='bx bx-map'></i>Area 49, Dubai
+            <br>Lilongwe, Malawi
+          </p>
+          <h3 class="contact-title">Hours</h3>
+          <p class="contact-desc">Monday - Friday: 9am - 5pm</p>
+          <!-- <p class="contact-desc">Tuesday: 9am - 5pm</p>
+          <p class="contact-desc">Wednesday: 9am - 5pm</p>
+          <p class="contact-desc">Thursday: 9am - 5pm</p>
+          <p class="contact-desc">Friday: 9am - 5pm</p> -->
+          <p class="contact-desc">Saturday: 10am - 4pm</p>
+          <p class="contact-desc">Sunday: Closed</p>
+          <h3 class="contact-title">Follow us</h3>
+          <p class='social-icons contact-desc'>
+            <a href=""><i class='bx bxl-blogger'></i></a>
+            <a href=""><i class='bx bxl-facebook'></i></a>
+            <a href=""><i class='bx bxl-whatsapp'></i></a>
+            <a href=""><i class='bx bxl-instagram'></i></a>
+            <a href=""><i class='bx bxl-twitter'></i></a>
+            <a href=""><i class='bx bxl-youtube'></i></a>
+
+          </p>
+        </div>
+      </div>
+      <script>
+        const form = document.querySelector('.contact-form');
+        form.addEventListener('submit', (e) => {
+          e.preventDefault();
+          const name = document.getElementById('name').value;
+          const email = document.getElementById('email').value;
+          const phone = document.getElementById('phone').value;
+          const message = document.getElementById('message').value;
+          console.log(name, email, phone, message);
+        });
+        let formHeight = form.clientHeight;
+        let contactCard = document.querySelector('.contact-card');
+        contactCard.style.minHeight = `${formHeight}px`;
+      </script>
+  </section>
+  <footer>
+    <h2>Urban Links Arts Malawi</h2>
+    <p>Empowering Malawi’s creative community</p>
+  </footer>
+  <script src="scripts/script.js"></script>
+</body>
+
+</html>
